--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
     </header>
     <main>
-      <p>Hello wordl &lt;3</p>
+      <p>Hello world</p>
     </main>
     <footer>
     </footer>
