--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
+  <header>
+    <title>Ruz Karter</title>
+  </header>
   <body>
-    <header>
-    </header>
-    <main>
-      <p>Hello world</p>
-    </main>
-    <footer>
-    </footer>
+    <h1> Inanimé disponible ! </h1>
+    <img src="cover.png" alt="Cover Inanimé"/>
+    <h2> Spotify </h2>
+    <iframe src="https://open.spotify.com/embed?uri=spotify:album:5XdLbSq6r8ZY3tmbGvRQPO" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+    <h2> Apple Music </h2>
+    <iframe src="https://embed.music.apple.com/fr/album/inanim%C3%A9-ep/1550079420?app=music&amp;itsct=music_box&amp;itscg=30200&amp;ct=albums_inanim%C3%A9___ep&amp;ls=1" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation-by-user-activation" allow="autoplay *; encrypted-media *;" style="width: 100%; max-width: 660px; overflow: hidden; border-radius: 10px; background: transpa    rent none repeat scroll 0% 0%;" height="450px" frameborder="0"></iframe>
+    <h2>Youtube</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLSQmiK8an8_NUI4fejwXqSY-jSwSJefwe" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <h2>Deezer</h2>
+    <iframe scrolling="no" frameborder="0" allowTransparency="true" src="https://www.deezer.com/plugins/player?format=classic&autoplay=false&playlist=true&width=700&height=350&color=EF5466&layout=&size=medium&type=album&id=201692932&app_id=1" width="700" height="240"></iframe>
   </body>
 </html>
